# mikucast-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cli/: cli.py  config.py  constants.py  interactive.py  llm_providers.py
src/cli/core/: constants.py  context.py  default_providers.toml  services.py  settings.py
src/mikucast_cli/: __init__.py
