[project]
name = "mikucast-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MikuCast", email = "mikucast.official@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mikucast-cli = "mikucast_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
