[project]
name = "mikucast-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MikuCast", email = "mikucast.official@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mikucast = "cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
